correct overflowing text on training night view

--- a/banshee/training/static/training/css/trainingnight.css
+++ b/banshee/training/static/training/css/trainingnight.css
@@ -2,16 +2,18 @@
     width: 100%;
     margin: auto;
     font-size: 13px;
+    max-width: 1400px;
 }
 
 .plan-wrapper tr th:first-child {
-    width: 50px
+    width: 40px
 }
 
 .plan-wrapper td,
 .plan-wrapper th {
     border: 1px solid white;
-    color: white
+    color: white;
+    width: 200px;
 }
 
 .plan-wrapper th {
